# riws-good-reads

./: .gitignore  .mdl_style.rb  .tool-versions  README.md
code/backend/: pyproject.toml
code/backend/data/: bulk_elastic.py  good_reads.json  good_reads_elastic.json  postman_collection.json
code/backend/good_reads/: items.py  pipelines.py  runner.py  settings.py
code/backend/good_reads/spiders/: good_reads.py
code/backend/scraper/: scraper.py
code/frontend/: package-lock.json  package.json
code/frontend/public/: index.html
code/frontend/src/: GoodreadsSearch.css  GoodreadsSearch.js  index.js
code/python/: bulk_elastic.py  good_reads.json  pyproject.toml  scrapy.cfg
code/python/commands/: __init__.py
code/python/data/: good_reads.json
code/python/good_reads/: items.py  middleware.py  pipelines.py  runner.py  settings.py
code/python/good_reads/spiders/: good_reads.py  test.py
code/python/scraper/: scraper.py
frontend/src/backend/: appFetch.js  elastic.js  index.js
frontend/src/i18n/messages/: messages_en.js  messages_es.js  messages_gl.js
frontend/src/modules/books/: actionTypes.js  actions.js  index.js  reducer.js  selectors.js
frontend/src/modules/books/components/: BookSearch.js
frontend/src/store/: index.js  rootReducer.js
