[tool.poetry]
name = "good_reads"
version = "1.0.0"
description = "Práctica de web scraping de RIWS 2023"
authors = ["David Fraga Rodríguez <david.fraga.rodriguez@udc.es>", "María Rey Escobar <maria.rescobar@udc.es>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
scrapy = "^2.11.0"
beautifulsoup4 = "^4.12.2"
scrapy-splash = "^0.9.0"
pylint = "^3.0.2"
black = "^23.10.1"
scrapy-useragents = "^0.0.1"

[tool.poetry.scripts]
lint = "commands:lint"
fmt = "commands:format_code"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
